nlw/share/skin/s3/css/screen.css
/* ... */
html body {
    line-height: normal;
}

body#blog div#controls div#controlsRight, div#st-editing-tools-edit {
    width: auto !important;
}

div#contentColumns div#contentLeft {
    overflow: auto !important;
}

/* {bz: 1459}: Safari needs overflow-y:hidden to hide the vertical scrollbar */
body div#contentColumns div#contentLeft {
    overflow-x: auto !important;
    overflow-y: hidden !important;
}

body div#contentColumns div#contentLeft.overflowVisible {
    overflow: visible !important;
}

div#contentColumns.hidebox #contentLeft {
    width: 97%;
}

div#contentColumns #contentRight {
    background-color: inherit;
}

div#contentColumns.hidebox #contentRight {
    display: none;
}

div#contentColumns.showbox #contentRight {
    display: block;
}

#st-wikinav-profile a {
    float: none !important;
}

div#header div#globalNav {
    padding: 8px 0px;
    margin: 0px;
    width: auto !important;
    white-space: nowrap;
}

div#controls div#controlsRight ul li a.watch.on {
       background: url(../images/watchingIcon.png) no-repeat center left;
}

td.listview-watchlist {
    width: 200px;
}

td.listview-watchlist a.watch.on {
       background: url(../images/watchingIcon.png) no-repeat center left;
}

td.listview-watchlist a.watch:hover {
    color: #33A8FF;
}

td.listview-watchlist a.watch {
    background: url(../images/watchIcon.png) no-repeat center left;
    color: #333333;
    float: right;
    display: block;
    font-weight: bold;
    text-decoration: none;
    padding: 0 10px 0 28px;
    margin: 5px;
}


/* Hacks to get around there not being an avatar on the araucaria version */
body#dashBoard div#controls div#frame {
    float: left;
    margin: 7px 0 0 20px;
    background:none;
}
body#dashBoard div#controls div#frame img {
    margin: 3px 3px 0 0;
}
body#dashBoard div#controls .welcome {
    margin-top: 6px;
    font-size: 12px;
    line-height: 16px;
    float: left;
    padding-left: 10px;
}

div#contentContainer {
    padding: 0 0 0px 20px;
}

table.dataTable td img.pageType {
    border: none;
    margin: 5px;
}
 
table.dataTable td img.avatar {
    float: none;
    margin: 5px;
    vertical-align: middle;
}

table.dataTable {
    width:98%;
}

table.dataTable .date {
    white-space: nowrap;
}

table.dataTable span.person {
    white-space: nowrap;
}

table.dataTable .summary strong {
    font-weight:bold;
    background:#ffc;
    padding:1px 2px;
}

div#bottomButtons {
    width: 100%;
}

div#bottomButtons ul.buttonRight {
    background: auto;
    height: auto;
    padding-left: auto;
}
div#bottomButtons img.avatar {
    vertical-align: middle;
}
 
div#bottomButtons div#pageAttribution {
    background: url(../images/controlsRightDivider.png) no-repeat center left;
    margin: 5px 5px 0 180px;
    padding: 5px;
}

body#blog div#controls div#st-editing-tools-edit h1,
div#contentContainer h2.tableTitle {
    font-size:2em;
    font-weight:normal;
    letter-spacing:1px;
    overflow: hidden;
    white-space: nowrap;
    text-overflow: ellipsis;
    padding-bottom: 2px;
}

div#contentContainer h2.tableTitle {
    width: 90%;
}

div#contentContainer h2.tableTitle.wrap {
    white-space: normal;
}

div#controls div#st-editing-tools-edit {
    max-width: 80%;
    display: block;
}

body#blog div#controls div#controlsRight {
    max-width: 20%;
}

div#controls div#st-editing-tools-edit {
    max-width: 80%;
}


div.goTo {
    white-space: nowrap;
}

/* Done overloads */

#globalNav form {
    text-align: right;
}

ul.normal {
    list-style: disc;
    list-style-position: inside;
}

ul.normal ul {
    list-style: circle;
    list-style-position: inside;
    padding-left: 10px;
}

ul.normal ul ul {
    list-style: square;
    list-style-position: inside;
    padding-left: 20px;
}

#st-email-lightbox th {
    padding-right: 10px;
    vertical-align: middle;
}

#st-email-lightbox input {
    margin-left: 0px;
}

#st-email-lightbox .email_input {
    width: 280px;
}

#st-email-lightbox .email_input_button {
    width: 116px;
}

#st-email-lightbox .email_input_textarea {
    width: 440px;
}

#wikiwyg_wikitext_textarea {
    background-color: #FFFFDD !important;
}

/* Additional Settings styles */
#settingsPage td {
    padding: 4px;
}

#settingsPage th {
    padding: 4px;
    font-weight: bold;
}

dl.invite dd, #settingsPage dd {
    line-height: 1.2em;
    margin-bottom: 4px;
}

/* Additional People Profiles styles */
ul li a.followPersonButton {
    line-height: 16px;
    height: 28px;
    background: url(../images/followIcon.png) no-repeat top left;
    padding-left: 25px;
    color:#333333;
    float:left;
    font-size:9px;
    font-weight:bold;
}

body#dashBoard div#lastsignal {
    font-size: 14px;
    color: #666;
    height: 28px;
    padding: 10px 20px 0 0;
    margin: 0;
    display: block;
    text-align:center;
    background:#FFFFFF url(../images/contentContainerTile.png) repeat-x scroll left top;
    border-left: 1px solid #759FB1;
    border-right: 1px solid #759FB1;
    border-bottom: 1px solid #ccc;
}

/* Wafl Boxes */

#st-page-content .wafl_container td {
    border: none;
    font-size: 1em;
}
/* there's wafl_box defs in wiki.css & screen.css */
.wafl_box {
    background: #ffffff none repeat scroll 0%;
    border: 1px solid #AAAAAA;
    color: #000000;
    padding: 10px;
}

.wafl_box .wiki {
    margin: 0px;
    border: none;
}

.wafl_title, .fetchrss_title {
    font-weight: bold;
    color: #000000;
    text-align: left;
    font-size: 1em;
}

.wafl_box ul {
    list-style-type: disc;
    padding-right: 10px;
}

/* Include page styles */

.wiki-include-edit-link {
    font-size: 10px;
    font-weight: normal;
}

.wiki-include-page {
    border-left: 1px solid #80a9f3;
    padding-left: 5px;
    padding-right: 10px;
    margin-left: 12px;
}

.wiki-include-title {
    font-size: 19px;
    font-weight: bold;
    margin-left: 6px;
    background: none;
}

.wiki-include-title a {
    text-decoration: none;
    color: blue;
}
/* ... */

